# Manufacture_from_GEAR

./: Readme.md  extra_packages_install.sh  install_conda_packages.sh  pre_requirements.txt  requirements.txt
cuda_supported_gear/: debug.py  llama_dummy_cache.py  modeling_llama_kivi.py  modeling_llamagear.py  test.py
cuda_supported_gear/quant/: dummy_pack.py  new_pack.py
cuda_supported_gear/quant/csrc/: .gitignore  CMakeLists.txt  setup.py
requirements_for_pip/: requirements.txt
